--- a/psvg-hs.cabal
+++ b/psvg-hs.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 423118f3e6960931f231e100552d1d3cf1dc88f78becb0fd8ef7ae3ce4407661
+-- hash: 208d6fa4c0321176edfd5b31d0c8453a4a466e9b75384c12f1ce65d69d2b9a74
 
 name:           psvg-hs
 version:        0.1.0.0
@@ -34,6 +34,7 @@ library
       src
   build-depends:
       base >=4.7 && <5
+    , containers
     , mtl
   default-language: Haskell2010
 
@@ -46,6 +47,7 @@ executable psvg-hs-exe
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , containers
     , mtl
     , psvg-hs
   default-language: Haskell2010
@@ -60,6 +62,7 @@ test-suite psvg-hs-test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , containers
     , mtl
     , psvg-hs
   default-language: Haskell2010
